name:                ekg-statsd
version:             0.2.1.0
synopsis:            Push metrics to statsd
description:
  This library lets you push system metrics to a statsd server.
homepage:            https://github.com/tibbe/ekg-statsd
bug-reports:         https://github.com/tibbe/ekg-statsd/issues
license:             BSD3
license-file:        LICENSE
author:              Johan Tibell
maintainer:          johan.tibell@gmail.com
category:            System
build-type:          Simple
extra-source-files:  CHANGES.md
cabal-version:       >=1.10

library
  exposed-modules:     
    System.Remote.Monitoring.Statsd

  build-depends:
    base >= 4.5 && < 4.10,
    bytestring < 1.0,
    ekg-core >= 0.1 && < 1.0,
    network < 2.7,
    text < 1.3,
    time < 1.7,
    unordered-containers < 0.3

  default-language:    Haskell2010

  ghc-options: -Wall

source-repository head
  type:     git
  location: https://github.com/tibbe/ekg-statsd.git
