name:               ekg-statsd
version:            0.2.6.0
synopsis:           Push metrics to statsd
description:
  This library lets you push system metrics to a statsd server.

homepage:           https://github.com/l0negamer/ekg-statsd
bug-reports:        https://github.com/l0negamer/ekg-statsd/issues
license:            BSD3
license-file:       LICENSE
author:             Johan Tibell
maintainer:
  Johan Tibell <johan.tibell@gmail.com>,
  Mikhail Glushenkov <mikhail.glushenkov@gmail.com>

category:           System
build-type:         Simple
extra-source-files: CHANGES.md
cabal-version:      >=1.10
tested-with:
  GHC ==8.0.2
   || ==8.2.2
   || ==8.4.4
   || ==8.6.5
   || ==8.8.3
   || ==8.10.7
   || ==9.0.2
   || ==9.2.8
   || ==9.4.8
   || ==9.6.4
   || ==9.6.6
   || ==9.8.2

library
  exposed-modules:  System.Remote.Monitoring.Statsd
  build-depends:
      base                  >=4.6 && <4.20
    , bytestring            <1.0
    , ekg-core              >=0.1 && <1.0
    , network               <3.3
    , text                  <2.2
    , time                  <1.13
    , unordered-containers  <0.3

  default-language: Haskell2010
  ghc-options:      -Wall

source-repository head
  type:     git
  location: https://github.com/l0negamer/ekg-statsd.git
