name:                ekg-statsd-examples
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Johan Tibell
maintainer:          johan.tibell@gmail.com
category:            Testing
build-type:          Simple
cabal-version:       >=1.10

executable ekg-statsd-examples
  main-is:             Basic.hs
  build-depends:       base >=4.6 && <4.7,
                       ekg-core,
                       ekg-statsd
  default-language:    Haskell2010
